Z-Index issue fixed

--- a/src/Styles/Navbar/navbar.module.scss
+++ b/src/Styles/Navbar/navbar.module.scss
@@ -3,6 +3,7 @@
   background-color: #18171c;
   position: sticky;
   top: 0;
+  z-index: 100 !important;
 }
 .logo {
   font-family: "Hammersmith One", sans-serif;
